<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/edit_input_merchant"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_num"
        android:visibility="gone"
        android:text="" />

    <EditText
        android:id="@+id/edit_input_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_store"
        android:visibility="gone"
        android:text="" />

    <EditText
        android:id="@+id/edit_input_terminal_sn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:hint="@string/input_SN"
        android:text="" />

    <EditText
        android:id="@+id/edit_input_currency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_zar"
        android:visibility="gone"
        android:text="" />

    <Button
        android:id="@+id/tv_btn_copy"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:padding="10dp"
        android:visibility="gone"
        android:text="@string/Save" />

    <Button
        android:id="@+id/tv_btn_2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal|center_vertical"
        android:padding="10dp"
        android:text="@string/Sale" />

    <Button
        android:id="@+id/tv_btn_refund"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/Refund" />

    <Button
        android:id="@+id/tv_btn_void"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/Void" />

    <Button
        android:id="@+id/tv_btn_per"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/PreAuth" />

    <Button
        android:id="@+id/tv_btn_complete"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/PreAuthComplete" />

    <Button
        android:id="@+id/tv_btn_per_cancel"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/PreAuthVoid" />

    <Button
        android:id="@+id/tv_btn_per_complete_refund"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/PreAuthCompleteRefund" />

    <Button
        android:id="@+id/tv_btn_query"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center|center_horizontal|center_vertical"
        android:padding="10dp"
        android:text="@string/Query" />

    <Button
        android:id="@+id/tv_btn_close"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/Close" />

    <Button
        android:id="@+id/tv_btn_black"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="" />
    </androidx.core.widget.NestedScrollView>

</LinearLayout>
</ScrollView>
