<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/edit_input_amount"
        android:digits="1234567890."
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="请输入金额（元为单位）" />

    <EditText
        android:id="@+id/edit_input_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="请输入备注" />

    <EditText
        android:id="@+id/edit_input_expires"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="过期时间默认300s" />

    <Switch
        android:id="@+id/switchButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:padding="10dp"
        android:text="@string/Admin" />

    <TextView
        android:id="@+id/tv_btn_1"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/PreAuth" />

    <TextView
        android:id="@+id/tv_btn_2"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/back" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_btn_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="" />
    </androidx.core.widget.NestedScrollView>

</LinearLayout>